# MLOps_Proyecto_1

./: .gitignore  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile
airflow/dags/: dag_01_data_collection.py  dag_02_data_processing.py  dag_03_data_training.py
api/: Dockerfile  main.py  pyproject.toml
api data/: main.py  requirements.txt
api data/data/: timestamps.json
jupyter/: mlops_pipeline_exploration.ipynb
jupyter/.ipynb_checkpoints/: mlops_pipeline_exploration-checkpoint.ipynb
notebooks/: model_training.ipynb
postgresql/init/: 01_init.sql
src/: bootstrap_api_data.py  config.py  data_loader.py  inference_service.py
