[project]
name = "proyecto-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.5.6",
    "minio>=7.2.20",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]
