[project]
name = "api"
version = "1.0.0"
description = "API INFERENCIA"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "numpy==1.24.4",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "minio==7.2.7",
    "psycopg2-binary==2.9.9",
    "python-multipart==0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false